prog/1stPartyLibs/quirrel/quirrel/testData/exec/runtime_type_check/assign_wrong_type_01.out

AN ERROR HAS OCCURRED [type 'float' differs from the declared type 'table']

CALLSTACK
*FUNCTION [__main__()] testData/exec/runtime_type_check/assign_wrong_type_01.nut:2

LOCALS
[x] 4
[vargv] ARRAY=[]
[this] NULL
Error [Failed to run script testData/exec/runtime_type_check/assign_wrong_type_01.nut (testData/exec/runtime_type_check/assign_wrong_type_01.nut)]
