prog/1stPartyLibs/quirrel/quirrel/testData/exec/runtime_type_check/assign_wrong_type_01.nut
let x = [4.0][0]
let y: table = x
return y
